# scihook

./: pyproject.toml
src/api/: CMakeLists.txt  MoniLogger.cc
src/api/monilogger/include/: MoniLogger.h
src/bindings/cpp/examples/fibonacci/: README.md  build.sh
src/bindings/cpp/examples/fibonacci/src/: CMakeLists.txt  example_moniloggers.py  fibonacci.cc  fibonacci.h  fibonacci_embedding.cc  fibonacci_embedding.h  fibonacci_main.cc
